--- a/src/app/componentes/tabla/tabla.component.html
+++ b/src/app/componentes/tabla/tabla.component.html
@@ -2,6 +2,15 @@
   tabla works!
 </p>
 
-<div *ngFor="let item of items" >
-  {{item.nombre}} -- {{item.cantidad}} 
-</div>
+<h3 class="first">Basic</h3>
+<p-dataTable >
+    <p-column field="vin" header="Vin"></p-column>
+    <p-column field="year" header="Year"></p-column>
+    <p-column field="brand" header="Brand"></p-column>
+    <p-column field="color" header="Color"></p-column>
+</p-dataTable>
+
+<h3>Dynamic Columns</h3>
+<p-dataTable [value]="cars">
+    <p-column *ngFor="let item of items" [field]="col.nombre" [header]="col.cantidad"> {{item.nombre}} </p-column>
+</p-dataTable>
