--- a/src/app/componentes/tabla/tabla.component.html
+++ b/src/app/componentes/tabla/tabla.component.html
@@ -1,16 +1,23 @@
 <p>
-  tabla works!
+    tabla works!
 </p>
 
-<h3 class="first">Basic</h3>
-<p-dataTable >
-    <p-column field="vin" header="Vin"></p-column>
-    <p-column field="year" header="Year"></p-column>
-    <p-column field="brand" header="Brand"></p-column>
-    <p-column field="color" header="Color"></p-column>
-</p-dataTable>
-
-<h3>Dynamic Columns</h3>
-<p-dataTable [value]="cars">
-    <p-column *ngFor="let item of items" [field]="col.nombre" [header]="col.cantidad"> {{item.nombre}} </p-column>
-</p-dataTable>
+<h3 class="first">Tabla</h3>
+<p-table [value]="items">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Nombre</th>
+            <th>Cantidad</th>
+            <th>Precio</th>
+            <th>Descripcion</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body">
+        <tr *ngFor="let item of items">
+            <td>{{item.nombre}}</td>
+            <td>{{item.cantidad}}</td>
+            <td>{{item.precio}}</td>
+            <td>{{item.descripcion}}</td>
+        </tr>
+    </ng-template>
+</p-table>
