tablas primeng OK

--- a/src/app/componentes/tabla/tabla.component.html
+++ b/src/app/componentes/tabla/tabla.component.html
@@ -3,7 +3,7 @@
 </p>
 
 <h3 class="first">Tabla</h3>
-<p-table [value]="items">
+<p-table [value]="cols">
     <ng-template pTemplate="header">
         <tr>
             <th>Nombre</th>
