--- a/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
+++ b/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
@@ -18,7 +18,9 @@
       <td class="auto">{{item.modelo}}</td>
       <td>{{item.tipo}}</td>
       <td>{{item.anio}}</td>
-      <td>{{item.foto}}</td>
+      <td>
+        <img src='{{item.foto}}' class="w3-image w3-circle" >
+      </td>
     </tr>
   </ng-template>
 </p-table>
@@ -34,7 +36,9 @@
     <td>{{item.modelo}}</td>
     <td>{{item.tipo}}</td>
     <td>{{item.anio}}</td>
-    <td>{{item.foto}}</td>
+    <td>
+      <img src='{{item.foto}}' class="w3-image w3-circle" style="width:140%;max-width:100px">
+    </td>
   </tr>
 
 </table>
