--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,3 +1,7 @@
-<p>
-  menu works!
-</p>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<div class="w3-bar w3-black">
+  <a routerLink="/" class="w3-bar-item w3-button">Home</a>
+  <a routerLink="/tabla" class="w3-bar-item w3-button">Tabla</a>
+  <a routerLink="/alta" class="w3-bar-item w3-button">Alta</a>
+</div>
