--- a/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
+++ b/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
@@ -11,6 +11,7 @@
       <th>Tipo</th>
       <th>Año</th>
       <th>Foto</th>
+      <th>Borrar</th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body">
@@ -21,6 +22,7 @@
       <td>
         <img src='{{item.foto}}' class="w3-image w3-circle" >
       </td>
+      <td><p-button label="Borrar" (click)="Borrar(item.id)"></p-button></td>
     </tr>
   </ng-template>
 </p-table>
@@ -31,6 +33,7 @@
     <th>Tipo</th>
     <th>Año</th>
     <th>Foto</th>
+    <th>Borrar</th>
   </tr>
   <tr *ngFor="let item of items">
     <td>{{item.modelo}}</td>
@@ -39,6 +42,7 @@
     <td>
       <img src='{{item.foto}}' class="w3-image w3-circle" style="width:140%;max-width:100px">
     </td>
+    <td><p-button label="Borrar" (click)="Borrar(item.id)"></p-button></td>
   </tr>
 
 </table>
