--- a/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
+++ b/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
@@ -3,8 +3,8 @@
 </p>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<h3 class="first">Tabla</h3>
-<p-table [value]="cols"> 
+<!-- <h3 class="first">Tabla</h3>
+<p-table [value]="cols">
   <ng-template pTemplate="header">
     <tr>
       <th>Modelo</th>
@@ -20,12 +20,14 @@
       <td>{{item.tipo}}</td>
       <td>{{item.anio}}</td>
       <td>
-        <img src='{{item.foto}}' class="w3-image w3-circle" >
+        <img src='{{item.foto}}' class="w3-image w3-circle">
       </td>
-      <td><p-button label="Borrar" (click)="Borrar(item.id)"></p-button></td>
+      <td>
+        <p-button label="Borrar" (click)="Borrar(item.id)"></p-button>
+      </td>
     </tr>
   </ng-template>
-</p-table>
+</p-table> -->
 
 <table class="w3-table w3-bordered">
   <tr>
@@ -36,13 +38,18 @@
     <th>Borrar</th>
   </tr>
   <tr *ngFor="let item of items">
-    <td>{{item.modelo}}</td>
-    <td>{{item.tipo}}</td>
-    <td>{{item.anio}}</td>
+    <td *ngIf="item.tipo=='auto'" class="auto">{{item.modelo}}</td>
+    <td *ngIf="item.tipo=='moto'" class="moto">{{item.modelo}}</td>
+    <td *ngIf="item.tipo=='auto'" class="auto">{{item.tipo}}</td>
+    <td *ngIf="item.tipo=='moto'" class="moto">{{item.tipo}}</td>
+    <td *ngIf="item.tipo=='auto'" class="auto">{{item.anio}}</td>
+    <td *ngIf="item.tipo=='moto'" class="moto">{{item.anio}}</td>
     <td>
       <img src='{{item.foto}}' class="w3-image w3-circle" style="width:140%;max-width:100px">
     </td>
-    <td><p-button label="Borrar" (click)="Borrar(item.id)"></p-button></td>
+    <td>
+      <p-button label="Borrar" (click)="Borrar(item.id)"></p-button>
+    </td>
   </tr>
 
 </table>
