--- a/src/app/componentes/alta/alta.component.html
+++ b/src/app/componentes/alta/alta.component.html
@@ -11,21 +11,16 @@
 
 <br>
 <br>
-
-<div class="ui-inputgroup">
-  <span class="ui-inputgroup-addon">
-    <i class="fa fa-motorcycle"></i>
-  </span>
-  <input type="text" pInputText placeholder="Tipo" [(ngModel)]="mivehiculo.tipo">
-</div>
-<br>
-<br>
-
+<label for="">Tipo de Vehiculo</label>
 <select name="tipo" [(ngModel)]="mivehiculo.tipo">
   <option value="" disabled selected>Choose your option</option>
   <option value="auto">Auto</option>
   <option value="moto">Moto</option>
 </select>
+<br>
+<br>
+
+
 
 <div class="ui-inputgroup">
   <span class="ui-inputgroup-addon">
