--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -6,5 +6,6 @@
     <a routerLink="/" class="w3-bar-item w3-button">Home</a>
     <a routerLink="/alta" class="w3-bar-item w3-button">Alta</a>
     <a routerLink="/tabla" class="w3-bar-item w3-button">Tabla</a>
+    <a routerLink="/buscar" class="w3-bar-item w3-button">Buscar</a>
   </div>
 </div>
