--- a/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
+++ b/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
@@ -15,20 +15,21 @@
     </tr>
   </ng-template>
   <ng-template pTemplate="body">
-    <tr *ngFor="let item of items">
-      <td class="auto">{{item.modelo}}</td>
-      <td>{{item.tipo}}</td>
-      <td>{{item.anio}}</td>
+    <tr *ngFor="let vehiculo of vehiculos">
+      <td class="auto">{{vehiculo.modelo}}</td>
+      <td>{{vehiculo.tipo}}</td>
+      <td>{{vehiculo.anio}}</td>
       <td>
-        <img src='{{item.foto}}' class="w3-image w3-circle">
+        <img src='{{vehiculo.foto}}' class="w3-image w3-circle">
       </td>
       <td>
-        <p-button label="Borrar" (click)="Borrar(item.id)"></p-button>
+        <p-button label="Borrar" (click)="Borrar(vehiculo.id)"></p-button>
       </td>
     </tr>
   </ng-template>
 </p-table> -->
-
+<app-buscar></app-buscar>
+<br>
 <table class="w3-table w3-bordered">
   <tr>
     <th>Modelo</th>
@@ -38,21 +39,21 @@
     <th>Ver</th>
     <th>Borrar</th>
   </tr>
-  <tr *ngFor="let item of items">
-    <td *ngIf="item.tipo=='auto'" class="auto">{{item.modelo}}</td>
-    <td *ngIf="item.tipo=='moto'" class="moto">{{item.modelo}}</td>
-    <td *ngIf="item.tipo=='auto'" class="auto">{{item.tipo}}</td>
-    <td *ngIf="item.tipo=='moto'" class="moto">{{item.tipo}}</td>
-    <td *ngIf="item.tipo=='auto'" class="auto">{{item.anio}}</td>
-    <td *ngIf="item.tipo=='moto'" class="moto">{{item.anio}}</td>
+  <tr *ngFor="let vehiculo of vehiculos">
+    <td *ngIf="vehiculo.tipo=='auto'" class="auto">{{vehiculo.modelo}}</td>
+    <td *ngIf="vehiculo.tipo=='moto'" class="moto">{{vehiculo.modelo}}</td>
+    <td *ngIf="vehiculo.tipo=='auto'" class="auto">{{vehiculo.tipo}}</td>
+    <td *ngIf="vehiculo.tipo=='moto'" class="moto">{{vehiculo.tipo}}</td>
+    <td *ngIf="vehiculo.tipo=='auto'" class="auto">{{vehiculo.anio}}</td>
+    <td *ngIf="vehiculo.tipo=='moto'" class="moto">{{vehiculo.anio}}</td>
     <td>
-      <img src='{{item.foto}}' class="w3-image w3-circle" style="width:140%;max-width:100px">
+      <img src='{{vehiculo.foto}}' class="w3-image w3-circle" style="width:140%;max-width:100px">
     </td>
     <td>
-      <p-button label="Ver" (click)="Ver(item)"></p-button>
+      <p-button label="Ver" (click)="Ver(vehiculo)"></p-button>
     </td>
     <td>
-      <p-button label="Borrar" (click)="Borrar(item.id)"></p-button>
+      <p-button label="Borrar" (click)="Borrar(vehiculo.id)"></p-button>
     </td>
   </tr>
 </table>
