--- a/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
+++ b/src/app/componentes/listado-vehiculos/listado-vehiculos.component.html
@@ -10,6 +10,9 @@
     <th>Año</th>
     <th>Foto</th>
     <th>Ver</th>
+    <!-- 
+      <th>Modificar</th> 
+    -->
     <th>Borrar</th>
   </tr>
   <tr *ngFor="let vehiculo of vehiculos">
@@ -25,10 +28,17 @@
     <td>
       <p-button label="Ver" (click)="Ver(vehiculo)"></p-button>
     </td>
+    <!--
     <td>
-      <p-button label="Borrar" (click)="Borrar(vehiculo.id)"></p-button>
+      <button pButton type="button" (click)="Modificar(vehiculo)" label="Modificar" class="ui-button-warning"></button>
+    </td>
+ -->
+    <td>
+      <button pButton type="button" (click)="Borrar(vehiculo.id)" label="Borrar" class="ui-button-danger"></button>
     </td>
   </tr>
 </table>
-<br><br>
+<br>
+<br>
 <app-un-vehiculo [unVehiculo]="vehiculoDelListado"></app-un-vehiculo>
+<app-modificar [unVehiculo]="vehiculoDelListadoM"></app-modificar>
